--- a/package.json
+++ b/package.json
@@ -7,22 +7,21 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.4.1",
-    "@tailwindcss/line-clamp": "^0.2.2",
+    "@headlessui/vue": "1.7.13",
     "swiper": "^7.0.8",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.11"
+    "vue": "3.3.4",
+    "vue-router": "4.2.2"
   },
   "devDependencies": {
     "@types/node": "^16.10.3",
     "@types/swiper": "^5.4.3",
-    "@vitejs/plugin-vue": "^1.9.0",
+    "@vitejs/plugin-vue": "4.2.3",
     "autoprefixer": "^10.3.6",
     "postcss": "^8.3.8",
-    "tailwindcss": "^2.2.16",
-    "typescript": "^4.4.3",
-    "unplugin-vue-components": "^0.15.4",
-    "vite": "^2.5.10",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4",
+    "unplugin-vue-components": "0.25.0",
+    "vite": "4",
     "vue-tsc": "^0.3.0"
   }
 }
